# lftpmirror

./: README.md  setup.cfg  setup.py
autopkg-recipe/: lftpmirror.pkg.recipe
lftpmirror/: __init__.py
tests/: test_sample.py
