[aliases]
test=pytest

[bdist_wheel]
universal=1

[bdist_rpm]
requires=python lftp

[metadata]
description-file=README.md

[bumpversion]
current_version = 0.0.1 
commit = True 
tag = True

[tool:pytest]
addopts = --verbose

[bumpversion:file:setup.py]
[bumpversion:file:README.md]
[bumpversion:file:autopkg-recipe/lftpmirror.pkg.recipe]
[bumpversion:file:lftpmirror/__init__.py]

