[bumpversion]
current_version = 0.0.2
commit = True
tag = True

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[bdist_rpm]
requires = python lftp

[metadata]
description-file = README.md

[tool:pytest]
addopts = --verbose

[bumpversion:file:setup.py]

[bumpversion:file:README.md]

[bumpversion:file:autopkg-recipe/lftpmirror.pkg.recipe]

[bumpversion:file:lftpmirror/__init__.py]

